--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -1,7 +1,5 @@
 ---
-import { useTranslations } from "../i18n";
-
-const t = useTranslations(Astro.currentLocale);
+import t from "../i18n/es.json";
 ---
 
 <footer>
