--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -1,24 +1,21 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "./Layout.astro";
-import { useTranslations } from "../i18n";
 
 const blogCollection = (await getCollection("blog")).sort((a, b) => {
   return b.data.publishedAt.getTime() - a.data.publishedAt.getTime();
 });
-
-const t = useTranslations(Astro.currentLocale);
 
 const schema = {
   "@context": "http://schema.org",
   "@type": "WebSite",
   id: "https://www.costas.dev/",
   url: "https://www.costas.dev/",
-  headline: t.homePage.title,
+  headline: "Ariel Costas - Desarrollador web",
 };
 ---
 
-<Layout title={t.homePage.title} description={t.homePage.description}>
+<Layout title="Inicio" description="Página de inicio de mi web">
   <script
     is:inline
     type="application/ld+json"
@@ -26,18 +23,29 @@ const schema = {
     set:html={JSON.stringify(schema)}
   />
 
-  <h1>{t.homePage.title}</h1>
-  <p>{t.homePage.welcome}</p>
+  <h1>Inicio</h1>
+  <p>
+    Te doy la bienvenida a mi web. Me llamo Ariel, y aquí encontrarás
+    información sobre mí y mis proyectos.
+  </p>
 
-  <h2>{t.homePage.whoAmI}</h2>
-  <p>{t.homePage.whoAmIDesc}</p>
-  <a href="/trajectory">{t.homePage.moreAboutMe}</a>
+  <h2>¿Quién soy?</h2>
+  <p>
+    Soy un desarrollador web que le gusta aprender cosas nuevas y compartir su
+    conocimiento. Me gusta la programación, el diseño web y la creatividad. Me
+    encanta crear cosas nuevas y aprender de los demás.
+  </p>
+  <a href="/trajectory">Más información sobre mí</a>
 
-  <h2>{t.homePage.whatIDo}</h2>
-  <p>{t.homePage.whatIDoDesc}</p>
-  <a href="/portfolio">{t.homePage.myPortfolio}</a>
+  <h2>¿Qué hago?</h2>
+  <p>
+    Actualmente trabajo como desarrollador de software y administrador Cloud en
+    una empresa de tecnología. Me encargo de desarrollar aplicaciones web en PHP
+    y desplegarlas en la nube de forma segura y eficiente.
+  </p>
+  <a href="/portfolio">Mi portfolio</a>
 
-  <h2>{t.homePage.latestBlogPosts}</h2>
+  <h2>Últimas entradas del blog</h2>
   <ul>
     {
       blogCollection.slice(0, 5).map((p) => {
@@ -55,5 +63,5 @@ const schema = {
       })
     }
   </ul>
-  <a href="/blog">{t.homePage.viewAllPosts}</a>
+  <a href="/blog">Ver todas las entradas</a>
 </Layout>
