--- a/src/layouts/TrajectoryPageLayout.astro
+++ b/src/layouts/TrajectoryPageLayout.astro
@@ -1,8 +1,6 @@
 ---
-import { useTranslations } from "../i18n";
+import t from "../i18n/es.json";
 import Layout from "./Layout.astro";
-
-const t = useTranslations(Astro.currentLocale);
 
 const schema = {
   "@context": "https://schema.org",
