--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -11,8 +11,7 @@ import t from "../i18n/es.json";
 
   <p>
     {t.footer.contentLicencedUnder}
-    <a
-      href={`https://creativecommons.org/licenses/by-sa/4.0/deed.es`}
+    <a href={`https://creativecommons.org/licenses/by-sa/4.0/deed.es`}
       >CC BY-SA 4.0</a
     >.
 
