--- a/src/partials/Header.astro
+++ b/src/partials/Header.astro
@@ -4,10 +4,10 @@ import t from "../i18n/es.json";
 
 <header>
   <a href="/">{t.header.home}</a>
-  <a href="/trajectory">{t.header.trajectory}</a>
-  <a href="/portfolio">{t.header.portfolio}</a>
-  <a href="/blog">{t.header.blog}</a>
-  <a href="/contact">{t.header.contact}</a>
+  <a href="/trajectory/">{t.header.trajectory}</a>
+  <a href="/portfolio/">{t.header.portfolio}</a>
+  <a href="/blog/">{t.header.blog}</a>
+  <a href="/contact/">{t.header.contact}</a>
 </header>
 
 <style lang="scss">
