--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
-$titleFontStack: "Beiruti", "Arial", system-ui, sans-serif;
-$mainFontStack: "Sen Variable", "Arial", system-ui, sans-serif;
+$titleFontStack: "Onest Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
+$mainFontStack: "Onest Variable", system-ui, "Liberation Sans", "Arial", "Helvetica", sans-serif;
 $monoFontStack: "Fira Code", "Consolas", monospace;
 
 $accent: hsl(209, 94%, 42%);
