--- a/src/layouts/PortfolioPageLayout.astro
+++ b/src/layouts/PortfolioPageLayout.astro
@@ -30,6 +30,14 @@ const schema = {
 
   <section>
     <PortfolioProject
+      title="Mapa patrimonial de la Costa Ártabra"
+      summary="Desarrollo de una aplicación completa para el patrimonio cultural y militar de la Costa Ártabra, con un sistema CMS para el personal de la administración y una aplicación web progresiva (PWA) para visualizar el mapa y planificar rutas."
+      tags={["dotnet", "react", "mysql", "ubuntu"]}
+      detailsLink="/portfolio/mapa-ferrol"
+      onlineLink="https://mapacostaartabramilitar.com"
+    />
+
+    <PortfolioProject
       title="Extractor de pedidos venta online"
       summary="Aplicación de escritorio que extrae los datos sobre los pedidos on-line de diversas plataformas (como WooCommerce, Amazon y Ebay)."
       tags={["java", "windows"]}
