Enhance homepage layout and content, improve accessibility, and update styles

--- a/src/layouts/HomePageLayout.astro
+++ b/src/layouts/HomePageLayout.astro
@@ -30,22 +30,49 @@ const schema = {
   </p>
 
   <h2>¿Quién soy?</h2>
+
   <p>
-    Soy un desarrollador web que le gusta aprender cosas nuevas y compartir su
-    conocimiento. Me gusta la programación, el diseño web y la creatividad. Me
-    encanta crear cosas nuevas y aprender de los demás.
+    Soy un desarrollador de software con varios años de experiencia en el sector,
+    especializado en el desarrollo de aplicaciones web y la administración de
+    sistemas Cloud. Me apasiona la tecnología y disfruto creando soluciones
+    prácticas y eficientes para resolver problemas reales, simplificando la vida
+    y el trabajo de las personas.
   </p>
-  <a href="/trajectory">Más información sobre mí</a>
+
+  <p>
+    En mi tiempo libre, fuera de mi trabajo, me interesan temas como la filosofía,
+    la economía y las finanzas, así como el derecho y la política. Me gusta
+    aprender sobre cómo funcionan las cosas y cómo se relacionan entre sí, y
+    reflexionar sobre el impacto que tienen en nuestra sociedad y en nuestras
+    vidas cotidianas.
+  </p>
 
   <h2>¿Qué hago?</h2>
+
   <p>
     Actualmente trabajo como desarrollador de software y administrador Cloud en
-    una empresa de tecnología. Me encargo de desarrollar aplicaciones web en PHP
-    y desplegarlas en la nube de forma segura y eficiente.
+    Estelaria Solutions, una empresa de tecnología en Vigo (España). Me encargo
+    de desarrollar aplicaciones web en PHP y desplegarlas en la nube de forma
+    segura y eficiente.
   </p>
-  <a href="/portfolio">Mi portfolio</a>
 
-  <h2>Últimas entradas del blog</h2>
+  <a href="/trajectory">Conoce más sobre mi trayectoria profesional</a>
+
+  <p>
+    También realizo ocasinalmente proyectos personales y freelance para clientes
+    que necesitan soluciones a medida o apoyo técnico en sus proyectos. Me
+    gusta trabajar con tecnologías modernas y aprender nuevas habilidades para
+    mejorar mi trabajo y ofrecer un mejor servicio a mis clientes.
+  </p>
+  <a href="/portfolio">Echa un vistazo a mi portfolio</a>
+
+  <h2>Mis reflexiones</h2>
+  <p>
+    En mi blog comparto mis reflexiones, aprendizajes y experiencias sobre
+    los temas que me interesan, además de hablar ocasionalmente sobre tecnología
+    y desarrollo. Disfruto escribiendo sobre lo que aprendo y reflexiono, pudiendo
+    plasmar mis ideas de forma clara y ordenada, y compartiéndolas con el mundo.
+  </p>
   <ul>
     {
       blogCollection.slice(0, 5).map((p) => {
