--- a/src/partials/Footer.astro
+++ b/src/partials/Footer.astro
@@ -30,6 +30,8 @@ import t from "../i18n/es.json";
   footer {
     background-color: $dark;
     color: $light;
+
+    vertical-align: middle;
     text-align: center;
 
     padding: 0.5rem 1rem;
