--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,6 +9,7 @@ $secondary: hsl(48, 100%, 50%);
 $dark: hsl(340, 13%, 5%);
 
 $background: hsl(210, 40%, 96%);
+$backgroundDarker: hsl(210, 40%, 80%);
 $light: hsl(214, 64%, 98%);
 $lightAlt: hsl(0, 0%, 100%);
 
